# 20261R0136COSE47400_team_fork

./: .gitignore  README.md  pyproject.toml
experiments/: README.md  RESULTS.md  train.py
experiments/cfg/: yolov8m-p2-sppf-k3.yaml  yolov8m-p2.yaml  yolov8m-sppf-k3.yaml  yolov8m.yaml
experiments/data/: sds.yaml
experiments/scripts/: check_pretrained_transfer.py  convert_sds.py  summarize_runs.py
teacher/: README.md  anchor_box_generate_center_sample.py  backbone.py  bbox_evaluator.py  test_sampling.py  train_teacher.py
teacher/configs/: sampling.yaml  train.yaml  train_smoke.yaml
teacher/sampling/: __init__.py  boxes.py  config.py  data.py  labeling.py  levels.py  metrics.py
teacher/training/: __init__.py  config.py  dataset.py  loop.py  model.py
teacher_on_yolo_bboxes/: compare_pipeline.py  main.py  visualize_scores.py
teacher_yolo_experiment/: train_with_teacher.py  train_with_teacher_2.py
yolov8/: README.md  __init__.py  loss.py  model.py  ops.py  tal.py  verify.py
yolov8/modules/: __init__.py  block.py  conv.py  head.py
yolov8/tests/: test_loss_equivalence.py  test_loss_smoke.py
